--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
-    </head>
-    <body>
+{% extends 'base.html.twig' %}
+
+{% block title %}Welcome!{% endblock %}
+
+
+
+  
+{% block body %}
         <h1>edfghgtfgfvgfg</h1>
-    </body>
-</html>
+{% endblock %}
